--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
   "work_dir": "/home/poini_coon/reversi_nn",
-  "model_path": "/home/poini_coon/reversi_nn/model.json",
+  "model_path": "/home/poini_coon/reversi_nn/model.h5",
   "model_image_path": "/home/poini_coon/reversi_nn/model.png",
-  "weights_path": "/home/poini_coon/reversi_nn/weights.h5",
   "x_train_path": "/home/poini_coon/reversi_nn/x_train.npy",
   "y_train_path": "/home/poini_coon/reversi_nn/y_train.npy",
   "x_test_path": "/home/poini_coon/reversi_nn/x_test.npy",
